--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,13 +1,14 @@
 <div class="features">
 
-    {% for feature in site.features %}
+    {% assign feature_list = t.features | default: site.features %}
+    {% for feature in feature_list %}
 
     {% if feature.title %}
     <div class="feature">
         <div>
             <span class="fa-stack fa-1x">
                 <i class="iconBack fas fa-circle fa-stack-2x"></i>
-                <i class="iconTop fas fa-{{ feature.fontawesome_icon_name }} fa-stack-1x"></i>
+                <i class="iconTop fas fa-{{ feature.icon | default: feature.fontawesome_icon_name }} fa-stack-1x"></i>
             </span>
         </div>
         <div class="featureText">
