--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -173,6 +173,13 @@ header {
 		margin-top: -60px;
 		justify-content: flex-start;
 	}	
+
+	.scroll.languageOnly {
+		padding-top: 0px;
+		padding-bottom: 0px;
+		margin-top: 0px;
+		justify-content: flex-end;
+	}
 	
 } 
 
@@ -221,6 +228,62 @@ nav > ul li a:active {
 	color: rgba($header-title-color, 1);
 }
 
+.langSwitchItem {
+	padding-left: 20px;
+}
+
+.langSwitchLink {
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	gap: 8px;
+	min-width: 92px;
+	padding: 9px 14px;
+	border: 1px solid rgba($header-title-color, 0.45);
+	border-radius: 999px;
+	line-height: 1;
+	font-weight: 600;
+}
+
+.langSwitchFlag {
+	font-size: 1.4rem;
+	line-height: 1;
+}
+
+.langSwitchCode {
+	letter-spacing: 0.04em;
+}
+
+nav > ul li a.langSwitchLink:link,
+nav > ul li a.langSwitchLink:visited {
+	color: rgba($header-title-color, 0.92);
+}
+
+nav > ul li a.langSwitchLink:hover,
+nav > ul li a.langSwitchLink:active {
+	color: rgba($header-title-color, 1);
+	background-color: rgba($header-title-color, 0.12);
+}
+
+@media only screen and (max-width: 768px) {
+
+	.langSwitchItem {
+		padding-left: 12px;
+	}
+
+	.langSwitchLink {
+		min-width: 84px;
+		padding: 8px 12px;
+		font-size: 1.4rem;
+		gap: 6px;
+	}
+
+	.langSwitchFlag {
+		font-size: 1.3rem;
+	}
+
+}
+
 
 
 // Sub Page Header Styling
@@ -236,6 +299,21 @@ nav > ul li a:active {
 .subPageHeaderBackground nav > ul li a:hover,
 .subPageHeaderBackground nav > ul li a:active {
 	color: rgba(#000, 1);
+}
+
+.subPageHeaderBackground .langSwitchLink {
+	border-color: rgba(#000, 0.24);
+}
+
+.subPageHeaderBackground nav > ul li a.langSwitchLink:link,
+.subPageHeaderBackground nav > ul li a.langSwitchLink:visited {
+	color: rgba(#000, 0.82);
+}
+
+.subPageHeaderBackground nav > ul li a.langSwitchLink:hover,
+.subPageHeaderBackground nav > ul li a.langSwitchLink:active {
+	color: rgba(#000, 1);
+	background-color: rgba(#000, 0.08);
 }
 
 
@@ -339,9 +417,20 @@ nav > ul li a:active {
 	filter: $drop-shadow;
 }
 
+.ctaNote {
+	color: $app-description-color;
+	font-size: 1.5rem;
+	line-height: 1.4;
+	margin-top: 14px;
+}
+
 @media only screen and (max-width: 992px) {
 
 	.downloadButtonsContainer {
+		text-align: center;
+	}
+
+	.ctaNote {
 		text-align: center;
 	}
 	
@@ -632,12 +721,15 @@ footer {
 
 .footerLinks {
 	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 18px 30px;
 	text-align: center;
 	padding-bottom: 70px;
 }
 
 .footerLinks a {
-	margin-right: 30px;
+	margin-right: 0px;
 }
 
 .footerLinks a:last-child {
