--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-{% assign current_lang = page.lang | default: "de" %}
-{% assign t = site.data.i18n[current_lang] | default: site.data.i18n.de %}
+{% assign current_lang = page.lang | default: "en" %}
+{% assign t = site.data.i18n[current_lang] | default: site.data.i18n.en %}
 <html lang="{{ current_lang }}">
 
 {% include head.html %}
