--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
 
 	<link rel="canonical" href="{{ canonical_url }}">
 	{% if page.url == "/" or page.url == "/de/" %}
-		<link rel="alternate" hreflang="en" href="{{ '/' | absolute_url }}">
+		<link rel="alternate" hreflang="en-US" href="{{ '/' | absolute_url }}">
 		<link rel="alternate" hreflang="de" href="{{ '/de/' | absolute_url }}">
 		<link rel="alternate" hreflang="x-default" href="{{ '/' | absolute_url }}">
 	{% endif %}
