--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,11 @@
 <!DOCTYPE html>
 {% assign current_lang = page.lang | default: "en" %}
 {% assign t = site.data.i18n[current_lang] | default: site.data.i18n.en %}
-<html lang="{{ current_lang }}">
+{% assign html_lang = current_lang %}
+{% if current_lang == "en" %}
+	{% assign html_lang = "en-US" %}
+{% endif %}
+<html lang="{{ html_lang }}">
 
 {% include head.html %}
 
