--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,10 @@
 {% if current_lang == "en" %}
 	{% assign html_lang = "en-US" %}
 {% endif %}
+{% assign appstore_badge_locale = "en-us" %}
+{% if current_lang == "de" %}
+	{% assign appstore_badge_locale = "de-de" %}
+{% endif %}
 <html lang="{{ html_lang }}">
 
 {% include head.html %}
@@ -57,13 +61,8 @@
                             </p>
                         </div>
                         <div class="downloadButtonsContainer">
-                            {% if site.playstore_link %}
-                                <a class="playStoreLink" href="{{ site.playstore_link }}" target="_blank" rel="noopener noreferrer">
-                                    <img class="playStore" src="{{ 'assets/playstore.png' | relative_url }}" alt="{{ t.playstore_badge_alt | default: 'Get it on Google Play' }}">
-                                </a>
-                            {% endif %}
                             <a class="appStoreLink" href="{{ site.appstore_link }}" target="_blank" rel="noopener noreferrer" data-prefer-api="true">
-                                <img class="appStore" src="{{ 'assets/appstore.png' | relative_url }}" alt="{{ t.appstore_badge_alt | default: 'Download on the App Store' }}">
+                                <img class="appStore" src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/{{ appstore_badge_locale }}?size=250x83" alt="{{ t.appstore_badge_alt | default: 'Download on the App Store' }}">
                             </a>
                             <p class="ctaNote">{{ t.cta_note }}</p>
                         </div>
